application/infra/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    prometheus: prometheus-NAMESPACE
  name: prometheus-NAMESPACE
  namespace: NAMESPACE
spec:
  ports:
  - name: web
    port: 9091
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
    prometheus: prometheus-NAMESPACE
