application/infra/prometheus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    prometheus: prometheus-NAMESPACE
  name: prometheus-NAMESPACE
  namespace: NAMESPACE
spec:
  host: prometheus-NAMESPACE.cp-stakater.com
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: prometheus-NAMESPACE
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - host: prometheus-NAMESPACE.cp-stakater.com
      routerName: router
      wildcardPolicy: None
